[gd_scene format=3 uid="uid://dbijcwoy7y16m"]

[ext_resource type="Script" uid="uid://iruslbr6r0tp" path="res://ui/main.gd" id="1_fblgx"]

[node name="MainMenu" type="Node2D" unique_id=340738033]
process_mode = 3
script = ExtResource("1_fblgx")

[node name="Start" type="Button" parent="." unique_id=452539925]
offset_left = 534.0
offset_top = 260.0
offset_right = 630.0
offset_bottom = 291.0
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Exit")
mouse_filter = 2
text = "Start Game"

[node name="Exit" type="Button" parent="." unique_id=779869517]
offset_left = 568.0
offset_top = 301.0
offset_right = 605.0
offset_bottom = 332.0
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Start")
mouse_filter = 2
text = "Exit"

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
